added logo + resume

--- a/index.html
+++ b/index.html
@@ -47,17 +47,17 @@ $(function() {
 		 <!-- Collect the nav links, forms, and other content for toggling -->
 		 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 				 <ul class="nav navbar-nav navbar-right">
-						 <li class="logo">
-								 <a href="index.html">bg</a>
+						 <li>
+								 <a class="logo"></a>
 						 </li>
 						 <li class="">
-								 <a class="page-scroll" href="#about">About Me</a>
+								 <a class="page-scroll" href="index.html">Home</a>
 						 </li>
 						 <li class="">
 								 <a class="page-scroll" href="projects.html">Projects</a>
 						 </li>
 						 <li class="">
-								 <a class="page-scroll" href="#skills">Skills</a>
+								 <a class="page-scroll" href=resume.html>Resume</a>
 						 </li>
 						 <li class="">
 								 <a class="page-scroll" href="#contact">Contact</a>
@@ -73,13 +73,25 @@ $(function() {
 
 <section class="header">
 	<section class="color">
-		<h1> BRIAN </h1>
-		<h1> GABOT </h1>
+		<div class="os-animation" data-os-animation="bounceIn" data-os-animation-delay="0.5s">
+		<svg version="1.1" width="200px" id="bg-logo" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+			 viewBox="0 0 475.5 447.7" style="enable-background:new 0 0 475.5 447.7;" xml:space="preserve">
+		<style type="text/css">
+			.st0{fill:#F8F7F8;}
+			.st1{font-family:'Courier';}
+			.st2{font-size:130px;}
+			.st3{fill:none;stroke:#FFFFFF;stroke-width:3;stroke-miterlimit:10;}
+		</style>
+		<text transform="matrix(1 0 0 1 137.4614 269.2308)" class="st0 st1 st2">bg</text>
+		<circle class="st3" cx="213.4" cy="230.9" r="180.8"/>
+		</svg>
+	 </div>
+		<h1> BRIAN GABOT</h1>
 		<ul id="list">
-		<li>[web developer]</li> <b> | </b>
-		<li>[illustrator]</li>
+		<li class="classification">[web developer]</li> <b> | </b>
+		<li class="classification">[illustrator]</li>
 		<br>
-		<li><a class="btn page-scroll" href="#about">Learn More</a></li>
+		<a class="btn page-scroll" href="#about">Learn More</a>
 	</ul>
 	</section>
 </section>
@@ -91,255 +103,6 @@ $(function() {
 			<p class="summary"> My name is Brian Gabot. I am a developer currently seeking a full-stack/or Front-end developer position. I graduated from the University of California, Santa Cruz in 2011 and had plans to become an accountant or financial analyst. However, I felt that these job occupations would not make me happy. I continued to work a few jobs dealing with business operations and analytics. One particular task that I was assigned as a catalog coordinator at Glyde was to manage website content. It was then I realized that my true passion was to create things that people would find useful, it was here on out that I decided to make a change into a web development career. In order to achieve my goal, I attended General Assembly's Web Development Immersive Program in September 2015 and graduated in December 2015. </p>
 			<p class="summary"> While I'm not in front of my computer developing or illustrating, I like to play table-top or video games.</p>
 	</div>
-</div>
-
-<div class="`row` text-center" id="Projects">
-<h2>Projects</h2>
-
-<!--Project Sakura Image-->
-<div class="row PJCT">
-<div class = "os-animation col-md-6" data-os-animation="fadeIn" data-os-animation-delay="0.5s" id ="sakura">
-<!--Test for new svg hover effect -->
-<?xml version="1.0" encoding="utf-8"?>
-<!-- Generator: Adobe Illustrator 19.1.0, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
-<svg version="1.1" class="Comp" id="proj_saku" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-	 viewBox="-550 123.3 898.5 546.7" style="enable-background:new -550 123.3 898.5 546.7;" xml:space="preserve">
-<style type="text/css">
-	.st10{fill:#E5B8D3;}
-	.st1{fill:#FFFFFF;}
-	.st2{fill:#F9F9F9;}
-	.st3{font-family:'MyriadPro-Regular';}
-	.st4{font-size:54.4534px;}
-	.st5{opacity: 0; fill:#F9F9F9;}
-</style>
-<path id="screen" class="st10" d="M-408.9,166.9h622c0,0,15.3,9.3,14.7,23.3c-0.7,14,2.7,408.7-0.7,413.3s-3.3,4.7-3.3,4.7
-	s-641.4,0.5-648.1-1.5s-7.2-412.5-3.9-419.8C-424.9,179.6-422.9,166.9-408.9,166.9z"/>
-	<image style="display:none; overflow:visible;enable-background:new;" width="495" height="287" id="iw-rpg" xlink:href="css/images/iw-rpg.png"  transform="matrix(1.1525 0 0 1.1525 -381.0778 222.6138)">
-	</image>
-<path id="base" class="st10" d="M325.2,606.7v24.4c0,0-28,17.7-37.3,18c-17.1,0.6-782.1-1.9-780-2c0,0-32-8.7-34-14s0-26.4,0-26.4
-	H325.2z"/>
-<path id="hole_1" class="st1" d="M-170,609.1c0,0,0,10.8,4.9,10.8s121.9,0,121.9,0s4.9-10.5,4.9-10.8
-	C-38.2,608.9-170,609.1-170,609.1z"/>
-<path id="hole_2" class="st1" d="M265,620.3h-18c0,0-2.5,3.1,0,3.4c2.5,0.3,28.3,0,28.3,0s0.9,0,1-0.9s1.3-2.3-1.8-2.5
-	C271.5,620.2,265,620.3,265,620.3z"/>
-<image class = "image" style="enable-background:new;" width="2758" height="1606" id="saku" xlink:href="css/images/saku.png"  transform="matrix(0.2075 0 0 0.2075 -381.9604 221.3845)">
-</image>
-<a xlink:href="http://projectsakura.herokuapp.com/">
-<image class = "image" style="overflow:visible;enable-background:new;" width="2758" height="1606" id="black" xlink:href="css/images/black.jpg" transform="matrix(0.2075 0 0 0.2075 -381.9604 221.3845)">
-	</a>
-</image>
-<text transform="matrix(1 0 0 1 -250.4967 364.7416)" class="st2 st3 st4">Project Sakura</text>
-</svg>
-</div>
-
-<div class= "os-animation proj-para col-md-8 col-lg-6" data-os-animation="bounceInRight" data-os-animation-delay="0s" id="testpp">
- <span class="text1"> <h class= "h"> <strong> Project Sakura </strong> </h> </span> <br>
-  <span class="text2"> <p class="ppgraph"> <strong> Project Sakura is an application to help Music Enthusiasts find Japanese Music Concerts/Festivals in their area. At the time, I was teaching myself React.js and wanted to create an application based on it. Currently, the application is solely front-end, however, I may integrate a backend to it in the future. I was the illustrator and developer for this site. The front-end is anchored by express and react.js. Illustrations were designed using Adobe Illustrator. </p>
-  <p class="ppgraph"> Technologies used: Express.js, Node, CSS, Bootstrap, SVG animations, Adobe Illustrator, React.js, Soundcloud API, Gulp.js</strong> </p> </span>
-</div>
-
-</div>
-
-<!--IW-RPG Image-->
-<div class="row PJCT">
-<div class = "os-animation col-md-6" data-os-animation="fadeIn" data-os-animation-delay="0.5s" id ="sakura">
-<!--Test for new svg hover effect -->
-<?xml version="1.0" encoding="utf-8"?>
-<!-- Generator: Adobe Illustrator 19.1.0, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
-<svg version="1.1" class="Comp" id="proj_saku" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-	 viewBox="-550 123.3 898.5 546.7" style="enable-background:new -550 123.3 898.5 546.7;" xml:space="preserve">
-<style type="text/css">
-	.st0{fill:#7F7F7F;}
-	.st1{fill:#FFFFFF;}
-	.st2{fill:#F9F9F9;}
-	.st3{font-family:'MyriadPro-Regular';}
-	.st4{font-size:54.4534px;}
-	.st5{opacity: 0; fill:#F9F9F9;}
-</style>
-<path id="screen" class="st0" d="M-408.9,166.9h622c0,0,15.3,9.3,14.7,23.3c-0.7,14,2.7,408.7-0.7,413.3s-3.3,4.7-3.3,4.7
-	s-641.4,0.5-648.1-1.5s-7.2-412.5-3.9-419.8C-424.9,179.6-422.9,166.9-408.9,166.9z"/>
-	<image style="overflow:visible;enable-background:new;" width="495" height="287" id="iw-rpg" xlink:href="css/images/Persona.jpg"  transform="matrix(1.1525 0 0 1.1525 -381.0778 222.6138)">
-	</image>
-<path id="base" class="st0" d="M325.2,606.7v24.4c0,0-28,17.7-37.3,18c-17.1,0.6-782.1-1.9-780-2c0,0-32-8.7-34-14s0-26.4,0-26.4
-	H325.2z"/>
-<path id="hole_1" class="st1" d="M-170,609.1c0,0,0,10.8,4.9,10.8s121.9,0,121.9,0s4.9-10.5,4.9-10.8
-	C-38.2,608.9-170,609.1-170,609.1z"/>
-<path id="hole_2" class="st1" d="M265,620.3h-18c0,0-2.5,3.1,0,3.4c2.5,0.3,28.3,0,28.3,0s0.9,0,1-0.9s1.3-2.3-1.8-2.5
-	C271.5,620.2,265,620.3,265,620.3z"/>
-<image style="display:none; enable-background:new;" width="2762" height="1595" id="collab" xlink:href="css/images/collab.jpg"  transform="matrix(0.2075 0 0 0.2075 -382.3754 222.5257)">
-</image>
-<image class = "image" style="display:none; enable-background:new;" width="2758" height="1606" id="saku" xlink:href="css/images/saku.png"  transform="matrix(0.2075 0 0 0.2075 -381.9604 221.3845)">
-</image>
-<a xlink:href="http://shrouded-caverns-8468.herokuapp.com/">
-<image class = "image" style="overflow:visible;enable-background:new;" width="2758" height="1606" id="black" xlink:href="css/images/black.jpg"  transform="matrix(0.2075 0 0 0.2075 -381.9604 221.3845)">
-</a>
-</image>
-<!-- <text transform="matrix(1 0 0 1 -250.4967 364.7416)" class="st2 st3 st4">Project Sakura</text> -->
-<text transform="matrix(1 0 0 1 -250.4999 364.2425)" class="st2 st3 st4">Persona Gamer</text>
-<!-- <text transform="matrix(1 0 0 1 -261.4944 370.7414)" class="st2 st3 st4">Collab-A-Comic</text> -->
-<!-- <text transform="matrix(1 0 0 1 -219.4962 347.7423)"><tspan x="0" y="0" class="st5 st3 st4">Looking For </tspan><tspan x="0" y="65.3" class="st5 st3 st4">Group</tspan></text> -->
-</svg>
-</div>
-<div class= "os-animation proj-para col-md-8 col-lg-6" data-os-animation="bounceInRight" data-os-animation-delay="0s" id="testpp">
-	<!-- <div class= "para animated bounceInRight col-md-4" id="testpp"> -->
-	<!-- class="os-animation" data-os-animation="fadeInLeft" data-os-animation-delay="0s" -->
- <span class="text1"> <h class= "h"> <strong> Persona Gamer </strong> </h> </span> <br>
-  <span class="text2"> <p class="ppgraph"> <strong> Persona Gamer is a personality test application catered towards RPG gamers. This was the first application I created. I initially used traitify's API but found the restricted use of the API hindered the usage of the site. I then decided to build a replica of Traitify's API using javascript and jQuery. </p>
-  <p class="ppgraph"> Technologies used: Javascript, MongoDB, Node.js, Mongoose.js, CSS, Bcrypt, jQuery, HTML, Bootstrap</strong> </p> </span>
-</div>
-</div>
-
-
-<!--LFG Image-->
-<div class="row PJCT">
-<div class = "os-animation col-md-6" data-os-animation="fadeIn" data-os-animation-delay="0.5s" id ="sakura">
-<!--Test for new svg hover effect -->
-<?xml version="1.0" encoding="utf-8"?>
-<!-- Generator: Adobe Illustrator 19.1.0, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
-<svg version="1.1" class="Comp" id="proj_saku" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-	 viewBox="-550 123.3 898.5 546.7" style="enable-background:new -550 123.3 898.5 546.7;" xml:space="preserve">
-<style type="text/css">
-	.st40{fill:#0F9D58;}
-	.st1{fill:#FFFFFF;}
-	.st2{fill:#F9F9F9;}
-	.st3{font-family:'MyriadPro-Regular';}
-	.st4{font-size:54.4534px;}
-	.st5{opacity: 0; fill:#F9F9F9;}
-</style>
-<path id="screen" class="st40" d="M-408.9,166.9h622c0,0,15.3,9.3,14.7,23.3c-0.7,14,2.7,408.7-0.7,413.3s-3.3,4.7-3.3,4.7
-	s-641.4,0.5-648.1-1.5s-7.2-412.5-3.9-419.8C-424.9,179.6-422.9,166.9-408.9,166.9z"/>
-<image style="display:none; overflow:visible;enable-background:new;" width="495" height="287" id="iw-rpg" xlink:href="css/images/iw-rpg.png"  transform="matrix(1.1525 0 0 1.1525 -381.0778 222.6138)">
-</image>
-<path id="base" class="st40" d="M325.2,606.7v24.4c0,0-28,17.7-37.3,18c-17.1,0.6-782.1-1.9-780-2c0,0-32-8.7-34-14s0-26.4,0-26.4
-	H325.2z"/>
-<path id="hole_1" class="st1" d="M-170,609.1c0,0,0,10.8,4.9,10.8s121.9,0,121.9,0s4.9-10.5,4.9-10.8
-	C-38.2,608.9-170,609.1-170,609.1z"/>
-<path id="hole_2" class="st1" d="M265,620.3h-18c0,0-2.5,3.1,0,3.4c2.5,0.3,28.3,0,28.3,0s0.9,0,1-0.9s1.3-2.3-1.8-2.5
-	C271.5,620.2,265,620.3,265,620.3z"/>
-<image style="overflow:visible;enable-background:new;" width="2751" height="1495" id="lfg" xlink:href="css/images/lfg-2.png"  transform="matrix(0.2074 0 0 0.2218 -381.0778 222.6138)">
-</image>
-<image style="display:none; enable-background:new;" width="2762" height="1595" id="collab" xlink:href="css/images/collab.jpg"  transform="matrix(0.2075 0 0 0.2075 -382.3754 222.5257)">
-</image>
-<image class = "image" style="display:none; enable-background:new;" width="2758" height="1606" id="saku" xlink:href="css/images/saku.png"  transform="matrix(0.2075 0 0 0.2075 -381.9604 221.3845)">
-</image>
-<a xlink:href="http://lfg-meetup.herokuapp.com/">
-<image class = "image" style="overflow:visible;enable-background:new;" width="2758" height="1606" id="black" xlink:href="css/images/black.jpg"  transform="matrix(0.2075 0 0 0.2075 -381.9604 221.3845)">
-</a>
-</image>
-<text transform="matrix(1 0 0 1 -219.4962 347.7423)"><tspan x="0" y="0" class="st5 st3 st4">Looking For </tspan><tspan x="0" y="65.3" class="st5 st3 st4">Group</tspan></text>
-</svg>
-</div>
-<div class= "os-animation proj-para col-md-8 col-lg-6" data-os-animation="bounceInRight" data-os-animation-delay="0s" id="testpp">
- <span class="text1"> <h class= "h"> <strong> LFG </strong> </h> </span> <br>
-  <span class="text2"> <p class="ppgraph"> <strong> LFG is a social networking portal targeted towards gamers. Members will be able to form meet up groups for a specific game. I collaborated with three other group members to create a website built mainly from Ruby on Rails. On the back-end, I worked on routings, authorizations, validations and seeded data while on the front-end, I worked on CSS stylings and some design work. </p>
-  <p class="ppgraph"> Technologies used: PostgresSQL, Ruby on Rails, CSS, Bootstrap, HTML, Javascript, Material Design</strong> </p> </span>
-</div>
-</div>
-
-
-<!--COLLAB-A-COMIC Image-->
-<div class="row PJCT">
-<div class = "os-animation col-md-6" data-os-animation="fadeIn" data-os-animation-delay="0.5s" id ="sakura">
-<!--Test for new svg hover effect -->
-<?xml version="1.0" encoding="utf-8"?>
-<!-- Generator: Adobe Illustrator 19.1.0, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
-<svg version="1.1" class="Comp" id="proj_saku" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-	 viewBox="-550 123.3 898.5 546.7" style="enable-background:new -550 123.3 898.5 546.7;" xml:space="preserve">
-<style type="text/css">
-	.st20{fill:#BFAD59;}
-	.st1{fill:#FFFFFF;}
-	.st2{fill:#F9F9F9;}
-	.st3{font-family:'MyriadPro-Regular';}
-	.st4{font-size:54.4534px;}
-	.st5{opacity: 0; fill:#F9F9F9;}
-</style>
-<path id="screen" class="st20" d="M-408.9,166.9h622c0,0,15.3,9.3,14.7,23.3c-0.7,14,2.7,408.7-0.7,413.3s-3.3,4.7-3.3,4.7
-	s-641.4,0.5-648.1-1.5s-7.2-412.5-3.9-419.8C-424.9,179.6-422.9,166.9-408.9,166.9z"/>
-	<image style="display:none; overflow:visible;enable-background:new;" width="495" height="287" id="iw-rpg" xlink:href="css/images/collab.jpg"  transform="matrix(1.1525 0 0 1.1525 -381.0778 222.6138)">
-	</image>
-<path id="base" class="st20" d="M325.2,606.7v24.4c0,0-28,17.7-37.3,18c-17.1,0.6-782.1-1.9-780-2c0,0-32-8.7-34-14s0-26.4,0-26.4
-	H325.2z"/>
-<path id="hole_1" class="st1" d="M-170,609.1c0,0,0,10.8,4.9,10.8s121.9,0,121.9,0s4.9-10.5,4.9-10.8
-	C-38.2,608.9-170,609.1-170,609.1z"/>
-<path id="hole_2" class="st1" d="M265,620.3h-18c0,0-2.5,3.1,0,3.4c2.5,0.3,28.3,0,28.3,0s0.9,0,1-0.9s1.3-2.3-1.8-2.5
-	C271.5,620.2,265,620.3,265,620.3z"/>
-<image style="display:none; overflow:visible;enable-background:new;" width="2751" height="1495" id="lfg" xlink:href="css/images/lfg-2.png"  transform="matrix(0.2074 0 0 0.2218 -381.0778 222.6138)">
-</image>
-<image style="enable-background:new;" width="2758" height="1600" id="collab" xlink:href="css/images/collab.jpg"  transform="matrix(0.2075 0 0 0.2075 -382.3754 222.5257)">
-</image>
-<image class = "image" style="display:none; enable-background:new;" width="2758" height="1606" id="saku" xlink:href="css/images/saku.png"  transform="matrix(0.2075 0 0 0.2075 -381.9604 221.3845)">
-</image>
-<a xlink:href="http://collabacomic.herokuapp.com/">
-<image class = "image" style="overflow:visible;enable-background:new;" width="2758" height="1606" id="black" xlink:href="css/images/black.jpg"  transform="matrix(0.2075 0 0 0.2075 -381.9604 221.3845)">
-</a>
-</image>
-<!-- <text transform="matrix(1 0 0 1 -250.4967 364.7416)" class="st2 st3 st4">Project Sakura</text> -->
-<!-- <text transform="matrix(1 0 0 1 -199.4999 364.2425)" class="st2 st3 st4">IW-RPG</text> -->
-<text transform="matrix(1 0 0 1 -261.4944 370.7414)" class="st2 st3 st4">Collab-A-Comic</text>
-<!-- <text transform="matrix(1 0 0 1 -219.4962 347.7423)"><tspan x="0" y="0" class="st5 st3 st4">Looking For </tspan><tspan x="0" y="65.3" class="st5 st3 st4">Group</tspan></text> -->
-</svg>
-</div>
-<div class= "os-animation proj-para col-md-8 col-lg-6" data-os-animation="bounceInRight" data-os-animation-delay="0s" id="testpp">
- <span class="text1"> <h class= "h"> <strong> Collab-a-Comic </strong> </h> </span> <br>
-  <span class="text2"> <p class="ppgraph"> <strong> Collab-a-comic is a website application that helps comic book writers and artists find a collaboration partner. The website was created through ruby on rails for the front-end and PostgreSQL for the backend.  </p>
-  <p class="ppgraph"> Technologies used: PostgresSQL, Ruby on Rails, CSS, Bootstrap, HTML, Javascript, Action Mailer, Adobe Photoshop</strong> </p> </span>
-</div>
-</div>
-</div>
-
-
-
-<div class= "os-animation row" data-os-animation="fadeIn" data-os-animation-delay="0.5s" id="skills">
-<h2> Skills </h2>
-	<div class= "col-lg-3 col-md-4 col-sm-4 col-xs-12 text-center" id="Skills">
- <h4> Languages </h4>
-	<div>
-<img src="css/images/html5.png" height="100" width="100">
-	 <ul class="listings">
-		 <li> HTML5 </li> <b> | </b>
-		 <li> CSS3 </li> <b> | </b>
-		 <li> Javascript </li> <b> | </b>
-		 <li> Ruby </li>
-	 </ul>
- </div>
- </div>
-
-<div class=" col-lg-3 col-md-4 col-sm-4 col-xs-12 text-center">
-<h4> Frameworks/Libraries </h4>
-<img src="css/images/ruby.png" width="100" height="100">
- <ul class="listings">
- <li> Node.js </li> <b> | </b>
- <li> Express.js </li> <b> | </b>
- <li> AngularJS </li> <b> | </b>
- <li> Ruby on Rails </li> <b> | </b>
- <li> React.js </li> <b> | </b>
- <li> Bootstrap </li> <b> | </b>
- <li> jQuery </li>
- </ul>
- </div>
-
-<div class="col-lg-3 col-md-4 col-sm-4 col-xs-12 text-center">
-<h4> Databases </h4>
-<img src="css/images/postgres.png" width="100" height="100">
- <ul class="listings">
- <li> PostgreSQL </li> <b> | </b>
- <li> MongoDB </li> <b> | </b>
- <li> Mongoose.js </li>
- </ul>
-</div>
-
-<div class="col-lg-3 col-md-4 col-sm-4 col-xs-12 text-center">
-<h4> Other </h4>
-<img src="css/images/Photoshop.jpg" width="100" height="100">
-	 <ul class="listings">
-	 <li> Git/Github </li> <b> | </b>
-	 <li> JIRA </li> <b> | </b>
-	 <li> Heroku </li> <b> | </b>
-	 <li> Photoshop </li> <b> | </b>
-	 <li> Illustrator </li>
-	 </ul>
-	 </div>
-
 </div>
 
 <div class = "os-animation" data-os-animation="fadeIn" data-os-animation-delay="0.5s" id="contact">
