--- a/projects.html
+++ b/projects.html
@@ -58,7 +58,7 @@ $(function() {
 								 <a class="page-scroll" href="projects.html">Projects</a>
 						 </li>
 						 <li class="">
-								 <a class="page-scroll" href="#skills">Skills</a>
+								 <a class="page-scroll" href=resume.html>Resume</a>
 						 </li>
 						 <li class="">
 								 <a class="page-scroll" href="#contact">Contact</a>
