--- a/test.html
+++ b/test.html
@@ -1,3 +1,4 @@
+<!--Old template for site -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -47,17 +48,17 @@ $(function() {
 		 <!-- Collect the nav links, forms, and other content for toggling -->
 		 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 				 <ul class="nav navbar-nav navbar-right">
-						 <li class="hidden active">
-								 <a href="#page-top"></a>
+						 <li class="logo">
+								 <a href="index.html">bg</a>
 						 </li>
 						 <li class="">
 								 <a class="page-scroll" href="#about">About Me</a>
 						 </li>
 						 <li class="">
-								 <a class="page-scroll" href="#Projects">Projects</a>
+								 <a class="page-scroll" href="projects.html">Projects</a>
 						 </li>
 						 <li class="">
-								 <a class="page-scroll" href="#skills">Skills</a>
+								 <a class="page-scroll" href=resume.html>Resume</a>
 						 </li>
 						 <li class="">
 								 <a class="page-scroll" href="#contact">Contact</a>
@@ -72,22 +73,25 @@ $(function() {
 
 
 <section class="header">
-<section class="color">
-<h1> BRIAN </h1>
-<h1> GABOT </h1>
-<ul id="list">
-<li>[web developer]</li> <b> | </b>
-<li>[illustrator]</li>
-</ul>
-</section>
+	<section class="color">
+		<h1> BRIAN </h1>
+		<h1> GABOT </h1>
+		<ul id="list">
+		<li class="classification">[web developer]</li> <b> | </b>
+		<li class="classification">[illustrator]</li>
+		<br>
+		<a class="btn page-scroll" href="#about">Learn More</a>
+	</ul>
+	</section>
 </section>
 
 <div class="about" id="about">
-<div class="os-animation" data-os-animation="fadeInRight" data-os-animation-delay="0s">
-<h2 class="about-par"> <span id="About"> About Me </span> </h2>
-<p class="summary"> My name is Brian Gabot. I am a developer currently seeking a full-stack/or Front-end developer position. I graduated from the University of California, Santa Cruz in 2011 and had plans to become an accountant or financial analyst. However, I felt that these job occupations would not make me happy. I continued to work a few jobs dealing with business operations and analytics. One particular task that I was assigned as a catalog coordinator at Glyde was to manage website content. It was then I realized that my true passion was to create things that people would find useful, it was here on out that I decided to make a change into a web development career. In order to achieve my goal, I attended General Assembly's Web Development Immersive Program in September 2015 and graduated in December 2015. </p>
-<p class="summary"> While I'm not in front of my computer developing or illustrating, I like to play table-top or video games.</p>
-</div>
+	<div class="os-animation" data-os-animation="fadeInRight" data-os-animation-delay="0s">
+		<img id="profile" src="css/images/profile.png">
+		<h2 class="about-par"> <span id="About"> About Me </span> </h2>
+			<p class="summary"> My name is Brian Gabot. I am a developer currently seeking a full-stack/or Front-end developer position. I graduated from the University of California, Santa Cruz in 2011 and had plans to become an accountant or financial analyst. However, I felt that these job occupations would not make me happy. I continued to work a few jobs dealing with business operations and analytics. One particular task that I was assigned as a catalog coordinator at Glyde was to manage website content. It was then I realized that my true passion was to create things that people would find useful, it was here on out that I decided to make a change into a web development career. In order to achieve my goal, I attended General Assembly's Web Development Immersive Program in September 2015 and graduated in December 2015. </p>
+			<p class="summary"> While I'm not in front of my computer developing or illustrating, I like to play table-top or video games.</p>
+	</div>
 </div>
 
 <div class="row text-center" id="Projects">
@@ -119,28 +123,19 @@ $(function() {
 	C-38.2,608.9-170,609.1-170,609.1z"/>
 <path id="hole_2" class="st1" d="M265,620.3h-18c0,0-2.5,3.1,0,3.4c2.5,0.3,28.3,0,28.3,0s0.9,0,1-0.9s1.3-2.3-1.8-2.5
 	C271.5,620.2,265,620.3,265,620.3z"/>
-<image style="display:none;overflow:visible;enable-background:new;" width="2751" height="1495" id="lfg" xlink:href="css/images/lfg-2.png"  transform="matrix(0.2074 0 0 0.2218 -381.0778 222.6138)">
-</image>
-<image style="enable-background:new;" width="2762" height="1595" id="collab" xlink:href="css/images/collab.jpg"  transform="matrix(0.2075 0 0 0.2075 -382.3754 222.5257)">
-</image>
-
 <image class = "image" style="enable-background:new;" width="2758" height="1606" id="saku" xlink:href="css/images/saku.png"  transform="matrix(0.2075 0 0 0.2075 -381.9604 221.3845)">
-
 </image>
 <a xlink:href="http://projectsakura.herokuapp.com/">
 <image class = "image" style="overflow:visible;enable-background:new;" width="2758" height="1606" id="black" xlink:href="css/images/black.jpg" transform="matrix(0.2075 0 0 0.2075 -381.9604 221.3845)">
 	</a>
 </image>
 <text transform="matrix(1 0 0 1 -250.4967 364.7416)" class="st2 st3 st4">Project Sakura</text>
-<!-- <text transform="matrix(1 0 0 1 -199.4999 364.2425)" class="st2 st3 st4">IW-RPG</text>
-<text transform="matrix(1 0 0 1 -261.4944 370.7414)" class="st2 st3 st4">Collab-A-Comic</text> -->
-<!-- <text transform="matrix(1 0 0 1 -219.4962 347.7423)"><tspan x="0" y="0" class="st5 st3 st4">Looking For </tspan><tspan x="0" y="65.3" class="st5 st3 st4">Group</tspan></text> -->
 </svg>
 </div>
 
 <div class= "os-animation proj-para col-md-8 col-lg-6" data-os-animation="bounceInRight" data-os-animation-delay="0s" id="testpp">
  <span class="text1"> <h class= "h"> <strong> Project Sakura </strong> </h> </span> <br>
-  <span class="text2"> <p class="ppgraph"> <strong> Project Sakura is an application to help Music Enthusiasts find Japanese Music Concerts/Festivals in their area   </p>
+  <span class="text2"> <p class="ppgraph"> <strong> Project Sakura is an application to help Music Enthusiasts find Japanese Music Concerts/Festivals in their area. At the time, I was teaching myself React.js and wanted to create an application based on it. Currently, the application is solely front-end, however, I may integrate a backend to it in the future. I was the illustrator and developer for this site. The front-end is anchored by express and react.js. Illustrations were designed using Adobe Illustrator. </p>
   <p class="ppgraph"> Technologies used: Express.js, Node, CSS, Bootstrap, SVG animations, Adobe Illustrator, React.js, Soundcloud API, Gulp.js</strong> </p> </span>
 </div>
 
@@ -164,7 +159,7 @@ $(function() {
 </style>
 <path id="screen" class="st0" d="M-408.9,166.9h622c0,0,15.3,9.3,14.7,23.3c-0.7,14,2.7,408.7-0.7,413.3s-3.3,4.7-3.3,4.7
 	s-641.4,0.5-648.1-1.5s-7.2-412.5-3.9-419.8C-424.9,179.6-422.9,166.9-408.9,166.9z"/>
-	<image style="overflow:visible;enable-background:new;" width="495" height="287" id="iw-rpg" xlink:href="css/images/iw-rpg.png"  transform="matrix(1.1525 0 0 1.1525 -381.0778 222.6138)">
+	<image style="overflow:visible;enable-background:new;" width="495" height="287" id="iw-rpg" xlink:href="css/images/Persona.jpg"  transform="matrix(1.1525 0 0 1.1525 -381.0778 222.6138)">
 	</image>
 <path id="base" class="st0" d="M325.2,606.7v24.4c0,0-28,17.7-37.3,18c-17.1,0.6-782.1-1.9-780-2c0,0-32-8.7-34-14s0-26.4,0-26.4
 	H325.2z"/>
@@ -172,8 +167,6 @@ $(function() {
 	C-38.2,608.9-170,609.1-170,609.1z"/>
 <path id="hole_2" class="st1" d="M265,620.3h-18c0,0-2.5,3.1,0,3.4c2.5,0.3,28.3,0,28.3,0s0.9,0,1-0.9s1.3-2.3-1.8-2.5
 	C271.5,620.2,265,620.3,265,620.3z"/>
-<image style="display:none; overflow:visible;enable-background:new;" width="2751" height="1495" id="lfg" xlink:href="css/images/lfg-2.png"  transform="matrix(0.2074 0 0 0.2218 -381.0778 222.6138)">
-</image>
 <image style="display:none; enable-background:new;" width="2762" height="1595" id="collab" xlink:href="css/images/collab.jpg"  transform="matrix(0.2075 0 0 0.2075 -382.3754 222.5257)">
 </image>
 <image class = "image" style="display:none; enable-background:new;" width="2758" height="1606" id="saku" xlink:href="css/images/saku.png"  transform="matrix(0.2075 0 0 0.2075 -381.9604 221.3845)">
@@ -183,7 +176,7 @@ $(function() {
 </a>
 </image>
 <!-- <text transform="matrix(1 0 0 1 -250.4967 364.7416)" class="st2 st3 st4">Project Sakura</text> -->
-<text transform="matrix(1 0 0 1 -199.4999 364.2425)" class="st2 st3 st4">IW-RPG</text>
+<text transform="matrix(1 0 0 1 -250.4999 364.2425)" class="st2 st3 st4">Persona Gamer</text>
 <!-- <text transform="matrix(1 0 0 1 -261.4944 370.7414)" class="st2 st3 st4">Collab-A-Comic</text> -->
 <!-- <text transform="matrix(1 0 0 1 -219.4962 347.7423)"><tspan x="0" y="0" class="st5 st3 st4">Looking For </tspan><tspan x="0" y="65.3" class="st5 st3 st4">Group</tspan></text> -->
 </svg>
@@ -191,9 +184,9 @@ $(function() {
 <div class= "os-animation proj-para col-md-8 col-lg-6" data-os-animation="bounceInRight" data-os-animation-delay="0s" id="testpp">
 	<!-- <div class= "para animated bounceInRight col-md-4" id="testpp"> -->
 	<!-- class="os-animation" data-os-animation="fadeInLeft" data-os-animation-delay="0s" -->
- <span class="text1"> <h class= "h"> <strong> IW-RPG </strong> </h> </span> <br>
-  <span class="text2"> <p class="ppgraph"> <strong> IW-RPG is an application used to determine what type of game rpg class bests fits you. </p>
-  <p class="ppgraph"> Technologies used: Javascript, MongoDB, Node.js, Mongoose.js, CSS, Bcrypt, jQuery, HTML, API, Bootstrap, Traitify API</strong> </p> </span>
+ <span class="text1"> <h class= "h"> <strong> Persona Gamer </strong> </h> </span> <br>
+  <span class="text2"> <p class="ppgraph"> <strong> Persona Gamer is a personality test application catered towards RPG gamers. This was the first application I created. I initially used traitify's API but found the restricted use of the API hindered the usage of the site. I then decided to build a replica of Traitify's API using javascript and jQuery. </p>
+  <p class="ppgraph"> Technologies used: Javascript, MongoDB, Node.js, Mongoose.js, CSS, Bcrypt, jQuery, HTML, Bootstrap</strong> </p> </span>
 </div>
 </div>
 
@@ -234,9 +227,6 @@ $(function() {
 <image class = "image" style="overflow:visible;enable-background:new;" width="2758" height="1606" id="black" xlink:href="css/images/black.jpg"  transform="matrix(0.2075 0 0 0.2075 -381.9604 221.3845)">
 </a>
 </image>
-<!-- <text transform="matrix(1 0 0 1 -250.4967 364.7416)" class="st2 st3 st4">Project Sakura</text> -->
-<!-- <text transform="matrix(1 0 0 1 -199.4999 364.2425)" class="st2 st3 st4">IW-RPG</text> -->
-<!-- <text transform="matrix(1 0 0 1 -261.4944 370.7414)" class="st2 st3 st4">Collab-A-Comic</text> -->
 <text transform="matrix(1 0 0 1 -219.4962 347.7423)"><tspan x="0" y="0" class="st5 st3 st4">Looking For </tspan><tspan x="0" y="65.3" class="st5 st3 st4">Group</tspan></text>
 </svg>
 </div>
@@ -266,7 +256,7 @@ $(function() {
 </style>
 <path id="screen" class="st20" d="M-408.9,166.9h622c0,0,15.3,9.3,14.7,23.3c-0.7,14,2.7,408.7-0.7,413.3s-3.3,4.7-3.3,4.7
 	s-641.4,0.5-648.1-1.5s-7.2-412.5-3.9-419.8C-424.9,179.6-422.9,166.9-408.9,166.9z"/>
-	<image style="display:none; overflow:visible;enable-background:new;" width="495" height="287" id="iw-rpg" xlink:href="css/images/iw-rpg.png"  transform="matrix(1.1525 0 0 1.1525 -381.0778 222.6138)">
+	<image style="display:none; overflow:visible;enable-background:new;" width="495" height="287" id="iw-rpg" xlink:href="css/images/collab.jpg"  transform="matrix(1.1525 0 0 1.1525 -381.0778 222.6138)">
 	</image>
 <path id="base" class="st20" d="M325.2,606.7v24.4c0,0-28,17.7-37.3,18c-17.1,0.6-782.1-1.9-780-2c0,0-32-8.7-34-14s0-26.4,0-26.4
 	H325.2z"/>
@@ -276,7 +266,7 @@ $(function() {
 	C271.5,620.2,265,620.3,265,620.3z"/>
 <image style="display:none; overflow:visible;enable-background:new;" width="2751" height="1495" id="lfg" xlink:href="css/images/lfg-2.png"  transform="matrix(0.2074 0 0 0.2218 -381.0778 222.6138)">
 </image>
-<image style="enable-background:new;" width="2762" height="1595" id="collab" xlink:href="css/images/collab.jpg"  transform="matrix(0.2075 0 0 0.2075 -382.3754 222.5257)">
+<image style="enable-background:new;" width="2758" height="1600" id="collab" xlink:href="css/images/collab.jpg"  transform="matrix(0.2075 0 0 0.2075 -382.3754 222.5257)">
 </image>
 <image class = "image" style="display:none; enable-background:new;" width="2758" height="1606" id="saku" xlink:href="css/images/saku.png"  transform="matrix(0.2075 0 0 0.2075 -381.9604 221.3845)">
 </image>
@@ -292,7 +282,7 @@ $(function() {
 </div>
 <div class= "os-animation proj-para col-md-8 col-lg-6" data-os-animation="bounceInRight" data-os-animation-delay="0s" id="testpp">
  <span class="text1"> <h class= "h"> <strong> Collab-a-Comic </strong> </h> </span> <br>
-  <span class="text2"> <p class="ppgraph"> <strong> Collab-a-comic is a website application that helps comic book writers and artists find a collaboration partner.   </p>
+  <span class="text2"> <p class="ppgraph"> <strong> Collab-a-comic is a website application that helps comic book writers and artists find a collaboration partner. The website was created through ruby on rails for the front-end and PostgreSQL for the backend.  </p>
   <p class="ppgraph"> Technologies used: PostgresSQL, Ruby on Rails, CSS, Bootstrap, HTML, Javascript, Action Mailer, Adobe Photoshop</strong> </p> </span>
 </div>
 </div>
